# azure-ai-workshop-1

./: .env.sample  .gitignore  01_OpenAI_getting_started.ipynb  02_ChatCompletion_api.ipynb  03_movie_classification_unsupervised_incl_recommendations_solution.ipynb  05_OpenAI_parameters.ipynb  06_best_practice.ipynb  07_prompt_engineering.ipynb  08_LLM_RAG_demo.ipynb  09_Function_Calling.ipynb  10_Vision.ipynb  11_Assistant.ipynb  12_responses.ipynb  CODESPACE_README.md  README.md  main.py  pyproject.toml  xx_google_search.ipynb
.devcontainer/: CODESPACE_GUIDE.md  README.md  devcontainer.json  post-create.sh  setup.sh
.github/workflows/: codespace-setup.yml
advanced/: AAS_bing_grounding.ipynb  AI_RedTeaming.ipynb  Quickstart-rag.ipynb  agentic-retrieval.ipynb  llm_websearch_crawling.ipynb  vector_search_for_llm.ipynb
data/: text-sample.json
