[project]
name = "azure-ai-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib==3.9.0",
    "openai==1.78.0",
    "pandas==2.1.3",
    "python-dotenv==1.0.1",
    "requests==2.32.2",
    "scikit-learn==1.3.0",
    "tenacity==8.2.3",
    "tiktoken==0.6.0",
    "serpapi==0.1.5",
    "azure-search-documents==11.6.0b12",
    "azure-identity>=1.22.0",
    "scrapy==2.11.0",
    "beautifulsoup4==4.12.2",
    "azure-ai-projects==1.0.0b10",
    "redis==6.1.0",
    "azure-ai-evaluation[redteam]==1.7.0", 
    "ipykernel"
]

[tool.setuptools.packages.find]
exclude = ["data*", "advanced*"]